<resources>
    <string name="app_name">Agroneo</string>
    <string name="navigation_open">Open menu</string>
    <string name="navigation_close">Close menu</string>
    <string name="nav_header_title">Agroneo.com</string>
    <string name="nav_header_subtitle">Grow the world</string>
    <string name="action_settings">Settings</string>
    <string name="gaia">Plants Map</string>
    <string name="discuss">Discuss</string>
    <string name="documents">Documents</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="title_activity_maps">Map</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="oauth_info">Choose a service to connect to Agroneo</string>
    <string name="twitter">Twitter</string>
    <string name="microsoft">Microsoft</string>
    <string name="title_activity_tab_x">TabActivityX</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
