<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/google"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginBottom="3dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:foreground="@drawable/google"
            android:layout_marginRight="5dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/google"
            android:theme="@style/bigtext" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/facebook"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginBottom="3dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:foreground="@drawable/facebook"
            android:layout_marginRight="5dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/facebook"
            android:theme="@style/bigtext" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/agroneo"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginBottom="3dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:foreground="@drawable/logo"
            android:layout_marginRight="5dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:theme="@style/bigtext" />
    </LinearLayout>

</LinearLayout>